--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/resource-timegrid": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "axios": "^1.8.4",
+    "mysql2": "^3.14.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
     "react": "^19.0.0",
