--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@fullcalendar/resource-timegrid": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "axios": "^1.8.4",
+    "date-fns": "^4.1.0",
     "mysql2": "^3.14.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
