--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
   "dependencies": {
     "@chakra-ui/react": "^3.13.0",
     "@emotion/react": "^11.14.0",
-    "@fullcalendar/core": "^6.1.15",
+    "@fullcalendar/core": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/resource-timegrid": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
