--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
     "@fullcalendar/resource-timegrid": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
     "axios": "^1.8.4",
+    "browser-image-resizer": "^2.4.1",
     "date-fns": "^4.1.0",
+    "heic-convert": "^2.1.0",
+    "heic2any": "^0.0.4",
     "mysql2": "^3.14.0",
     "next": "15.2.3",
     "next-themes": "^0.4.6",
