--- a/package.json
+++ b/package.json
@@ -11,15 +11,19 @@
   "dependencies": {
     "@chakra-ui/react": "^3.13.0",
     "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@fullcalendar/core": "^6.1.17",
     "@fullcalendar/daygrid": "^6.1.15",
     "@fullcalendar/interaction": "^6.1.17",
     "@fullcalendar/react": "^6.1.15",
     "@fullcalendar/resource-timegrid": "^6.1.15",
     "@fullcalendar/timegrid": "^6.1.15",
+    "@mui/material": "^7.1.2",
+    "@mui/x-date-pickers": "^8.5.3",
     "axios": "^1.8.4",
     "browser-image-resizer": "^2.4.1",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "heic-convert": "^2.1.0",
     "heic2any": "^0.0.4",
     "mysql2": "^3.14.0",
